--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "0.3.0",
     "@coreui/vue": "^2.0.2",
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.7",
     "css-vars-ponyfill": "^1.11.1",
+    "facebook-login-vuejs": "^2.1.3",
     "flag-icon-css": "^3.2.0",
     "font-awesome": "^4.7.0",
     "node-sass": "^4.9.4",
@@ -26,9 +28,11 @@
     "sass-loader": "^7.1.0",
     "simple-line-icons": "^2.4.1",
     "vue": "^2.5.17",
+    "vue-axios": "^2.1.4",
     "vue-chartjs": "^3.4.0",
     "vue-perfect-scrollbar": "^0.1.0",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
