--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "facebook-login-vuejs": "^2.1.3",
     "flag-icon-css": "^3.2.0",
     "font-awesome": "^4.7.0",
+    "mdbvue": "^4.8.1",
     "node-sass": "^4.9.4",
     "perfect-scrollbar": "^1.4.0",
     "sass-loader": "^7.1.0",
