--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "vueworkbox",
   "version": "1.0.0",
+  "main": "dist/index",
+  "typings": "dist/index",
   "description": "A Vue.js project",
   "author": "Wahyu Permadi <wahyu.permadi1725@gmail.com>",
   "private": true,
@@ -10,7 +12,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "@coreui/coreui": "^2.0.22",
+    "@coreui/coreui": "^2.1.0",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "0.3.0",
     "@coreui/vue": "^2.0.2",
@@ -19,21 +21,27 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.7",
-    "css-vars-ponyfill": "^1.11.1",
+    "css-vars-ponyfill": "^1.15.0",
     "facebook-login-vuejs": "^2.1.3",
     "flag-icon-css": "^3.2.0",
     "font-awesome": "^4.7.0",
-    "mdbvue": "^4.8.1",
-    "node-sass": "^4.9.4",
+    "mdbvue": "^4.8.2",
+    "node-sass": "^4.10.0",
     "perfect-scrollbar": "^1.4.0",
     "sass-loader": "^7.1.0",
     "simple-line-icons": "^2.4.1",
+    "velocity-animate": "^1.5.2",
     "vue": "^2.5.17",
     "vue-axios": "^2.1.4",
     "vue-chartjs": "^3.4.0",
+    "vue-notification": "^1.3.13",
     "vue-perfect-scrollbar": "^0.1.0",
     "vue-router": "^3.0.1",
     "vue-select": "^2.5.1",
+    "vue-spinner": "^1.0.3",
+    "vue-spinners": "^1.0.2",
+    "vue-sweetalert2": "^1.5.9",
+    "vue2-simplert-plugin": "^0.5.3",
     "vuelidate": "^0.7.4",
     "vuex": "^3.0.1"
   },
@@ -65,12 +73,13 @@
     "semver": "^5.6.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.3.0",
-    "url-loader": "^0.5.8",
+    "url-loader": "^1.1.2",
     "vue-loader": "^13.7.3",
     "vue-style-loader": "^3.1.2",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^3.12.0",
     "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^2.11.3",
     "webpack-merge": "^4.1.4",
     "workbox-webpack-plugin": "^3.6.3"
